# teaching-portfolio

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  TASKS.md  USER_ACTIONS.md  projects.yaml  pyproject.toml
aggregator/: __init__.py
content/patterns/: harness-over-prompt-engineering.md  idempotent-checkpoint-processing.md  llm-router-with-fallback.md  pipeline-vs-agent.md  privacy-first-design.md
docs/: learning-roadmap.md  restructure-plan.md
docs/adr/: 0001-three-repo-with-shared-core.md  0002-cloudflare-pages-over-vps.md  0003-custom-5stage-teaching-axis.md  0004-tool-agnostic-discussion-ingest.md  0005-projects-yaml-visibility-tiering.md  0006-workspace-standardised-project-overview.md
docs/sessions/: 2026-05-13-talk-prep-conversation.md
docs/spikes/: aggregator-extraction.md
schema/v1/: concept.json  lesson.json  pattern.json  project.json
sources/: ai-fluency-educators.md
taxonomy/: lenses.json  outcomes.json  workflow-5stage.json
tests/: test_smoke.py
