[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "content-core"
version = "0.1.0"
description = "Shared infrastructure for the jersgcodes growth + labs content engine"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Jerome" }]
license = { text = "MIT" }

dependencies = [
  "pyyaml>=6.0",
  "jsonschema>=4.21",
  "gitpython>=3.1",
  "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "bandit>=1.7",
  "radon>=6.0",
  "mypy>=1.10",
  "vulture>=2.11",
  "pip-audit>=2.7",
  "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aggregator*", "validators*", "tools*"]
exclude = ["tests*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true
warn_unused_ignores = true

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
